[package]
name = "lief-rs"
version = "0.1.0"
authors = [ "Alexandr Yusuk <aleksandr.yusuk@apriorit.com>" ]
edition = "2018"
description = "Rust bindings for LIEF (https://github.com/lief-project/LIEF)"

[lib]
name = "lief"
path = "src/lib.rs"

[dependencies]
bitflags = "1.2"
image = { version = "0.23", default-features = false, features = [ "ico" ] }
lief-sys = { path = "lief-sys" }
picky = { git = "https://github.com/Devolutions/picky-rs.git", rev = "610a4ef", features = ["wincert", "pkcs7"] }
thiserror = "1.0"
widestring = { version = "0.4", default-features = false, features = ["alloc"] }

[dev-dependencies]
lazy_static = "1.4"
tempfile = "3.2"
uuid = { version = "0.8", default-features = false, features = [ "v4" ] }

[profile.release]
opt-level = 3