[package]
name = "lief-rs"
version = "0.1.0"
authors = [ "Alexandr Yusuk <aleksandr.yusuk@apriorit.com>" ]
edition = "2018"
description = "Rust bindings for LIEF (https://github.com/lief-project/LIEF)"

[lib]
name = "lief"
path = "src/lib.rs"

[dependencies]
bitflags = "1.3.2"
image = { version = "0.24.1", default-features = false, features = [ "ico" ] }
lief-sys = { path = "lief-sys" }
picky = { version = "7.0.0-rc.2", default-features = false,  features = ["wincert", "x509", "pkcs7"] }
thiserror = "1.0.30"
widestring = { version = "0.5.1", default-features = false, features = ["alloc"] }

[dev-dependencies]
lazy_static = "1.4.0"
tempfile = "3.3.0"
uuid = { version = "0.8.2", default-features = false, features = [ "v4" ] }

[profile.release]
opt-level = 3
