[package]
name = "lief-cwal"
version = "0.1.0"
authors = [ "Alexandr Yusuk <aleksandr.yusuk@apriorit.com>" ]
description = "Unofficial idiomatic Rust bindings to Quarkslab's LIEF library"
keywords = ["lief", "elf", "executable", "parser"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Devolutions/lief-rs"

[dependencies]
bitflags = "1.3.2"
image = { version = "0.24.3", default-features = false, features = [ "ico" ] }
lief-cwal-sys = { version = "0.1.0", path = "./lief-sys" }
picky = { version = "7.0.0-rc.3", default-features = false, features = ["wincert", "x509", "pkcs7"] }
thiserror = "1.0.32"
widestring = { version = "1.0.2", default-features = false, features = ["alloc"] }

[dev-dependencies]
lazy_static = "1.4.0"
tempfile = "3.3.0"
uuid = { version = "1.1.2", default-features = false, features = [ "v4" ] }

[workspace]
members = ["./lief-sys"]
